Fixed aligns

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -573,11 +573,15 @@ body {
   font-weight: normal;
   font-size: 36px;
   line-height: 130%;
-  text-align: center;
+  // text-align: center;
   color: #F1BC51;
   margin-top: 50px;
   width: 100%;
   margin-bottom: 40px;
+}
+
+.ta-c {
+  text-align: center;
 }
 
 
@@ -808,6 +812,7 @@ body {
   z-index: 2;
   padding-bottom: 80px;
   position: relative;
+  margin-bottom: 13px;
 
   &:after {
     content: "";
@@ -966,6 +971,10 @@ body {
   background-position: center, right bottom;
   position: relative;
 
+  .info-title-m2 {
+    padding-left: 10px;
+  }
+
   &:after {
     content: "";
     background-image: url('../images/tree-pro-players.png');
@@ -1105,6 +1114,9 @@ body {
 
 .profile-cards {
   display: flex;
+  margin-top: 52px;
+  justify-content: space-between;
+  width: 320px;
   align-items: center;
 }
 
@@ -1112,7 +1124,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-right: 10px;
   color: #CCBA97;
   transition: 0.3s linear;
 
